--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 </head>
 <body>
-  <div class="box">
+  <main class="box">
 
     <img src="images/image-qr-code.png" alt="QR Code Image">
 
@@ -21,7 +21,7 @@
       <p class="t2">Scan the QR code to visit Frontend <br> Mentor and take your coding skills to <br>the next level</p>
     </div>
 
-  </div>
+  </main>
 
 
   <footer>
