--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <img src="images/image-qr-code.png" alt="QR Code Image">
 
     <div class="text">
-      <p class="t1">Improve your front-end <br> skills by building projects</p>
+      <h2 class="t1">Improve your front-end <br> skills by building projects</h2>
       <p class="t2">Scan the QR code to visit Frontend <br> Mentor and take your coding skills to <br>the next level</p>
     </div>
 
